infra/k8s/apps/gateway-api/00-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-api
  namespace: gaze-app
  labels:
    app: gateway-api
spec:
  selector:
    matchLabels:
      app: gateway-api
  template:
    metadata:
      labels:
        app: gateway-api
    spec:
      containers:
        - name: gateway-api
          image: juangmz7/gateway-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"     # Request 0.1 CPU
              memory: "256Mi"
            limits:
              cpu: "500m"    # Set CPU limit in 0.2
              memory: "512Mi"

        # TODO: Set env fields
