infra/k8s/apps/gateway-api/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: gaze-app
spec:
  selector:
    app: gateway-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
